@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Controller {
        + imageCurr : ImageView
        + l2 : TextField
        + lev : Slider
        + timeline : Timeline
        + JnBacks()
        + JnNexte()
        + JnPlayuu()
        + JnStope()
        + initialize()
        + updw()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} + main()
        + start()
    }
  }
  

  sample.Controller o-- sample.Methods.ImageCollection : imgs
  sample.Controller o-- sample.Methods.Iterator : iter_main
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
